--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -112,17 +112,17 @@ Die BeO's müssen immer mit etwa $\Delta D = 120\ \mu$Gy bestrahlt werden, was b
 \minipend
 \vspace{5mm}
 \ \\
-Diese Zeiten wurden nur als grobe Orientierungspunkte verwendet und sind aufgrund verschiedener Faktoren nicht genau eingehalten worden.
+Da der Zeitpunkt des endgültigen Verschließens der kollimierten Quelle nur sehr grob abgeschätzt werden kann, dienen die obigen Zeiten nur zur Orientierung und werden in der folgenden Messung erneut aufgenommen.
 
 \subsection{Dosismessung mit BeO$max$ und Abstandsquadratsgesetz}
-Zunächst führen wir für 4 BeOs eine Kalibrationsmessung durch, indem wir das Ansprechvermögen $\epsilon$ nach Gleichung (\ref{eq:ansprechvermoegen}) bestimmen. In Abschnitt \ref{sec:Ionkammer} haben wir dafür die Dosisleistung bei $d=0,5\ m$ und $\alpha =$ 180\textdegree \ mit $\dot{D}_{ref} = (0,309 \pm 0.002)\mu Gy /s$ bestimmt. Es ergibt sich durch die längere Messzeit von $\Delta t = 292,8\ s$ eine Dosis von $D_{ref} = \dot{D}_{ref} \cdot \Delta t = (90,5 \pm 0,6)\mu Gy$. Wobei ein systematischer Fehler bei der Zeitmessung von $\Delta(\Delta t) = 0,5s$ als Reaktionszeit angenommen wurde. Wir wiederholen nun die Messung mit dem Beo\textit{max}-System und bestimmen das Ansprechvermögen:\\
+Zunächst führen wir für 4 BeOs eine Kalibrationsmessung durch, indem wir das Ansprechvermögen $\epsilon$ nach Gleichung (\ref{eq:ansprechvermoegen}) bestimmen. In Abschnitt \ref{sec:Ionkammer} haben wir dafür die Dosisleistung bei $d=0,5\ \unit{m}$ und $\alpha =$ 180\textdegree \ mit $\dot{D}_{ref} = (0,309 \pm 0.002)\ \unit{\mu Gy} /s$ bestimmt. Es ergibt sich durch die längere Mess\-zeit von $\Delta t = 292,8\ \unit{s}$ eine Dosis von $D_{ref} = \dot{D}_{ref} \cdot \Delta t = (90,5 \pm 0,7)\ \unit{\mu Gy}$. Wobei ein systematischer Fehler bei der Zeitmessung von $\Delta(\Delta t) = 1\ \unit{s}$ als Reaktionszeit angenommen wurde. Wir wiederholen nun die Messung mit dem Beo\textit{max}-System und bestimmen das Ansprechvermögen:\\
 
 \minipanf
 	\begin{center}	
 		\begin{tabular}{c|c|c|c|c|c}
 					\textbf{d} [m] & BeO-Nr. & \textbf{LS$_0$} [mVs] & \textbf{LS} [mVs] & \textbf{$\epsilon$} [$\frac{Vs}{Gy}$] & $\Delta \epsilon$ [$\frac{Vs}{Gy}$]  \\
 			\hline  
-								& 003305 & 0,66 & 2,84 & 24,1 & 0,1\\
+								& 003305 & 0,66 & 2,84 & 24,1 & 0,2\\
 						0,5		& 003398 & 0,85 & 3,68 & 31,3 & 0,2\\
 								& 003372 & 0,77 & 3,34 & 28,4 & 0,2\\
 								& 003312 & 0,81 & 3,18 & 26,2 & 0,2\\								
@@ -134,7 +134,7 @@ Zunächst führen wir für 4 BeOs eine Kalibrationsmessung durch, indem wir das 
 
 \ \\
 Nun kommen wir zu den Messergebnissen für verschiedene Abstände. Verwendet wurden vier in der Mitte einer Plexisglas-Platte aufgebrachte BeO-Sensoren. Diese wurden für die in Tabelle \ref{dft:Zeiten} genannten Zeiten bestrahlt. 
-Die Dosiswerte der beiden Abstände $d = 0,5m$ und $d = 0,6m$ wurden leider nicht mit bereits kalibrierten BeO's vermessen. Wir haben diese allerdings von Hand über die vom PC bekannten Ansprechvermögen $\epsilon$ nachträglich ausgerechnet:
+Die Dosiswerte der beiden Abstände $d = 0,5\ \unit{m}$ und $d = 0,6\ \unit{m}$ wurden leider nicht mit bereits kalibrierten BeO's vermessen. Wir haben diese allerdings von Hand über die vom PC bekannten Ansprechvermögen $\epsilon$ nachträglich ausgerechnet:
  
 \minipanf
 	\begin{center}	
@@ -194,7 +194,7 @@ Damit haben wir nun die Dosisleistung für die einzelnen Abstände bestimmt, um 
 	\minipanf
 		\begin{tabular}{c|c|c|c|c|c|c}
 					d [m] & $\overline{D}$ [$\mu Gy$] & $\Delta D_{sys}$ [$\mu Gy$] & $\sigma(\overline{D})$ [$\mu Gy$] & $\Delta t$ [s] & $\dot{D}$ [$\mu Gy / s$] & $\Delta\dot{D}$ [$\mu Gy / s$] \\
-		\hline	0.3 & 85 & 2.6 & 0.36 & 112 & 0.437 & 0.016 \\
+		\hline	0.3 & 85 & 2.6 & 0.36 & 112 & 0.761 & 0.028 \\
 				0.4	& 88 & 2.6 & 0.84 & 195 & 0.453 & 0.018 \\
 				0.5 & 97 & 2.8 & 2.08 & 293 & 0.331 & 0.017 \\
 			    0.6	& 99 & 2.8 & 4.69 & 422 & 0.236 & 0.018 \\
@@ -211,16 +211,16 @@ Damit haben wir nun die Dosisleistung für die einzelnen Abstände bestimmt, um 
 
 Dabei wurden folgende Relationen verwendet:
 \begin{equation*}
-	\Delta D_{sys} = 1,5 \mu Gy + 0,013 \cdot D \\
+	\Delta D_{sys} = 1,5 \unit{\mu Gy} + 0,013 \cdot D \\
 \end{equation*}
 \begin{equation*}
 	\Delta \dot{D} = \dot{D} \cdot \sqrt{\left(\frac{\Delta (\Delta t)}			{\Delta t}\right)^2 + \left(\frac{\Delta D}{D} \right)^2} + \dot{D} 			\cdot \frac{\sigma(\overline{D})}{D}
 \end{equation*}
-Wobei $\Delta t = 1\ s$ als Reaktionszeit, um den Stopfen auf die Quelle zu packen, großzügig abgeschätzt wurde. Es wurden die Stoppuhrzeiten notiert - die vorher theoretisch berechneten Zeiten dienten nur als grobe Orientierung.
+Wobei $\Delta(\Delta t) = 1\ \unit{s}$ als Reaktionszeit, um den Stopfen auf die Quelle zu packen, abgeschätzt wurde. Es wurden die Stoppuhrzeiten notiert - die vorher theoretisch berechneten Zeiten dienten nur als grobe Orientierung.
 
 \subsection{Winkelabhängigkeit der kollimierten Quelle}
 
-Zuletzt interessiert uns die Strahlaufweitung unserer Quelle. Dafür nahmen acht BeO-Sonden, die wir nebeneinander in einer Reihe auf die 16cm breite Plexiglas-Halterung legten. Die Sonden diesmal nicht zentriert, sondern von Zentrum rechtsseitig versetzt worden. Der Abstand zum Sensor um Zentrum des Strahls beträgt $d = 0,3$m. Daraus ergibt sich eine ungefähre Bestrahldauer von $\Delta t = 5$min. Die Zeit ist größer als bei den Abstandsmessungen zuvor, da sich die Abstände mit wachsendem Winkel verändert.
+Zuletzt interessiert uns die Strahlaufweitung unserer Quelle. Dafür nahmen wir acht BeO-Sonden, die wir nebeneinander in einer Reihe auf die 16cm breite Plexiglas-Halterung legten. Die Sonden sind diesmal nicht zentriert, sondern vom Zentrum rechtsseitig versetzt platziert worden. Der sich daraus ergebende transversale Abstand wird mit s bezeichnet. Der Abstand des Sensors zum Zentrum des Strahls beträgt $d = 0,3\ \unit{m}$. Daraus ergibt sich eine ungefähre Bestrahldauer von $\Delta t = 5\ \unit{min}$. Die Bestrahldauer wurde größer gewählt als bei den vorigen Messungen, da die aufgenommene Dosis der weiter außen angebrachten Detektoren sonst zu niedrig ausfallen könnte.
 
 \vspace{5mm}
 \minipanf
@@ -236,7 +236,7 @@ Zuletzt interessiert uns die Strahlaufweitung unserer Quelle. Dafür nahmen acht
 				003332 & 0.13 & 0,73 & 1,37 & 48 & 2,1 \\
 				003376 & 0.15 & 0,59 & 0,74 & 26 & 1,8 \\
 		\end{tabular}
-		\captionof{table}{Messung der Strahlaufweitung der Quelle durch den Kollimator}
+		\captionof{table}{Messung der Strahlaufweitung der Quelle durch den Kollimator.}
         \label{dft:Aufweitung}
 	\end{center} 
 \minipend
