Some layout changings

--- a/DO/Protokoll/DO_Protokoll_ausw.tex
+++ b/DO/Protokoll/DO_Protokoll_ausw.tex
@@ -10,7 +10,7 @@ In Aufgabe 1 nahmen wir Messungen bezüglich des Strahlenschutzes vor. Dazu verw
     \minipanf    
         \makebox[\textwidth]{\includegraphics[width=1.4\linewidth, height=0.4\textheight]{pic/skizze}}
         \captionof{figure}{Raumskizze zu Messorten (nicht maßstabsgerecht)\\ 
-                            \textbf{1:} Arbeitsplatz, \textbf{2:} 50cm hinter Quelle, \textbf{3:} 50cm rechts der Quelle, \textbf{4:} 50cm links, \textbf{5:} 50cm davor, \textbf{6:} 8cm dahinter, \textbf{7:} 8cm davor}
+                            \textbf{1:} Arbeitsplatz, \textbf{2:} 50cm hinter Quelle, \textbf{3:} 50cm rechts der Quelle, \textbf{4:} 50cm links, \textbf{5:} 50cm davor, \textbf{6:} 8cm dahinter, \textbf{7:} 8cm davor.}
         \label{fig:skizze}
     \minipend
 \end{center}
@@ -50,7 +50,7 @@ Man erkennt allerdings gut, dass der BeO-Sensor, der hinter der Quelle lag, eine
     \begin{center}
         \minipanf
                 \makebox[\textwidth]{\input{GrafikIonisationskammer}} %Grafik für die Winkelabhängigkeit der Ionisationskammer, von qtiplot exportiert
-                \captionof{figure}{Messung der Vorzugsrichtung}
+                \captionof{figure}{Messung der Vorzugsrichtung.}
                 \label{auswd:Winkel}
         \minipend
     \end{center}
@@ -64,7 +64,7 @@ Wir haben durch unsere Messung mit dem Beo\textit{max}-System das Abstandsquadra
 \begin{center}
 	\minipanf    
         \makebox[\textwidth]{\includegraphics[width=1.2\linewidth, height=0.4\textheight]{pic/abstandsquadratgesetz}}
-        \captionof{figure}{Bestätigung des Abstandsquadratgesetzes}
+        \captionof{figure}{Bestätigung des Abstandsquadratgesetzes.}
         \label{fig:Abstandsquadrat}
     \minipend
     \vspace{5mm}
@@ -83,13 +83,11 @@ Dabei ist anzumerken, dass wir den Messwert für $d=0,3\ \unit{m}$ beim Fitten n
 \subsection{Winkelabhängigkeit der kollimierten Quelle}
 Wir haben in Tabelle \ref{dft:Aufweitung} den Zusammenhang zwischen dem transversalem Abstand zur Öffnung des Kollimators und der Dosisleistung bestimmt. Folgende Graphik veranschaulicht unsere Ergebnisse:
 \begin{center}
-    \minipanf    
-		\begin{center}    
-        	 \makebox[\textwidth]{\includegraphics[width=1.2\linewidth,
-        	 height=0.4\textheight]{pic/winkelabhaengigkeit}}
-       		 \captionof{figure}{Aufweitung der kollimierten Quelle}
+    \minipanf      
+        	 \includegraphics[width=1.2\linewidth,
+        	 height=0.4\textheight]{pic/winkelabhaengigkeit}
+       		 \captionof{figure}{Aufweitung der kollimierten Quelle.}
         \label{fig:Aufweitung}
-        \end{center}
     \minipend
     \vspace{5mm}
 \end{center}
