--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -19,7 +19,7 @@ Im Zweiten Schritt haben wir mittels vier der BeO-Sonden, die von der Betreuerin
 								50cm rechts der Quelle& 2,68  &  23,48 &   6,13\\ 
 								50cm links der Quelle & 3,22  &  28,71 &   5,11\\
 					\end{tabular}	
-					\captionof{table}{Messtabelle für Dosisleistung an verschiedenen Orten und der daraus resultierenden maximalen Verweildauer pro Tag}
+					\captionof{table}{Messtabelle für Dosisleistung an verschiedenen Orten und der daraus resultierenden maximalen Verweildauer pro Tag.}
 					\label{dft:Arbeitsplatz}
 					\vspace{8mm}
 					\begin{tabular}{l|c|c|c}
@@ -30,7 +30,7 @@ Im Zweiten Schritt haben wir mittels vier der BeO-Sonden, die von der Betreuerin
 								 \hspace{3mm} neben Quelle        & 003350 & 1,14  & 0,0437 \\
 								 \hspace{3mm} hinter Quelle       & 003376 & 0,19  & 0,0066 \\
 					\end{tabular}
-					\captionof{table}{BeO-Sensordaten, die über zwei Tage im Versuchsraum gesammelt wurden}
+					\captionof{table}{BeO-Sensordaten, die über zwei Tage im Versuchsraum gesammelt wurden.}
 					\label{dft:Raum}
                     \vspace{8mm}
 	\end{center}
@@ -61,7 +61,7 @@ Es handelt sich hier um eine aktive Sonde, die über ein Leichtleiterkabel an ei
 			    210 & 0,50 & 18,26 & 0,3043 & 0,3084 & 0,00073 \\ 
 		\hline	180 & 0,50 & 18,39 & 0,3065 & 0,3106 & 0,00073 \\ 
 		\end{tabular} 
-		\captionof{table}{Messwerte aus der Winkelabhängigkeit der Zylinderkammer}
+		\captionof{table}{Messwerte aus der Winkelabhängigkeit der Zylinderkammer.}
 		\label{dft:Winkel}
 	\end{center}
 Die Drehung der zylindrischen Ionenstrahlkammer wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die vorgegebene Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt. Während der Messungen betrugen die Temperatur im Raum $T = (294,75\pm 0,3)K$, der Druck $p = (100,52 \pm 0,01)kPa$ und die Luftfeuchtigkeit 54\%. Dabei sind die Fehler für Temperatur und Druck abgeschätzt. Während die Temperatur im Raum Schwankungen unterworfen war, konnte der Luftdruck nahezu erhalten bleiben. Bezüglich D$_0$ schätzen wir aufgrund des statistischen Charakters während der Messungen inklusive des Digits einen Fehler von $\Delta \dot{D} = 0,03\mu$Gy ab\\
@@ -106,7 +106,7 @@ Die BeO's müssen immer mit etwa $\Delta D = 120\ \mu$Gy bestrahlt werden, was b
 				   0,9 & 15,81 \\ 
 				   1,0 & 19.51 \\  
 		\end{tabular}
-		\captionof{table}{ungefähre Bestrahlungsdauer in Abhängigkeit vom Abstand}
+		\captionof{table}{ungefähre Bestrahlungsdauer in Abhängigkeit vom Abstand.}
 		\label{dft:Zeiten} 
 	\end{center}
 \minipend
@@ -127,7 +127,7 @@ Zunächst führen wir für 4 BeOs eine Kalibrationsmessung durch, indem wir das 
 								& 003372 & 0,77 & 3,34 & 28,4 & 0,2\\
 								& 003312 & 0,81 & 3,18 & 26,2 & 0,2\\								
 		\end{tabular}
-		\captionof{table}{Bestimmung des Ansprechvermögens}
+		\captionof{table}{Bestimmung des Ansprechvermögens.}
 	\end{center}
 \minipend
 \vspace{3mm}
@@ -182,7 +182,7 @@ Die Dosiswerte der beiden Abstände $d = 0,5\ \unit{m}$ und $d = 0,6\ \unit{m}$ 
 								& 003305 & 0,67 & 1,83 & 0,0785\\
 								
 		\end{tabular}
-		\captionof{table}{Sensor-ID, Lichtsignal der Nullmessung, Lichtsignal nach Bestrahlung und Dosis}
+		\captionof{table}{Sensor-ID, Lichtsignal der Nullmessung, Lichtsignal nach Bestrahlung und Dosis.}
         \label{dft:osl}
 	\end{center}
 \minipend
@@ -203,7 +203,7 @@ Damit haben wir nun die Dosisleistung für die einzelnen Abstände bestimmt, um 
 				0.9 & 103 & 2.8 & 1.64 & 975 & 0.106 & 0.005 \\
 				1.0 & 97 & 2.8 & 6.26 & 1170 & 0.083 & 0.008				
 		\end{tabular}
-		\captionof{table}{Dosisleistung in Abhängigkeit vom Abstand}
+		\captionof{table}{Dosisleistung in Abhängigkeit vom Abstand.}
 		\label{dft:Abstandsquadrat}
 	\minipend
 	\vspace{3mm}
