--- a/PET/Protokoll/PET_Protokoll_df.tex
+++ b/PET/Protokoll/PET_Protokoll_df.tex
@@ -5,23 +5,15 @@
        Zunächst haben wir eine Quelle in mittigem Abstand zu den beiden Detektoren vermessen. Die Quelle hatte am 29.10.2015 eine Aktivitiät $A = 1,02 MBq$.\\
        \vspace{2mm}
        \minipanf 
-                  \makebox[\textwidth]{\scalebox{0.5}{\input{../2015_10_29/qtiplots/Diagramm_tex/Efenster_DetA_M}}}
-                  \label{dfd:E_DetA_M}
+                  \makebox[\textwidth]{\scalebox{0.5}{\includegraphics{../2015_10_29/qtiplots/notfallbilder/T_A_dia.png}}}
+                  \label{dfd:T_A}
        \minipend
-       \vspace{2mm}
        \minipanf 
-                  \makebox[\textwidth]{\scalebox{0.5}{\input{../2015_10_29/qtiplots/Diagramm_tex/Efenster_DetB_M}}}
-                  \label{dfd:E_DetB_M}
-       \minipend
-       \vspace{2mm}
-       \minipanf 
-                  \makebox[\textwidth]{\scalebox{0.5}{\input{../2015_10_29/qtiplots/Diagramm_tex/T_M_dia}}}
-                  \label{dfd:T_M_dia}
-       \minipend
+       \vspace{3mm}
+       \includegraphics{../2015_10_29/qtiplots/notfallbilder/T_B_dia.png}
+       \label{dfd:T_B}
+       \minipend       
+
     \subsubsection{Messung bei Positionen direkt an den Detektoren}
-        \begin{tabular}{c c}
-            \scalebox{0.2}[0.2]{\input{../2015_10_29/qtiplots/Diagramm_tex/Efenster_DetB_A}} & \scalebox{0.2}[0.2]{\input{../2015_10_29/qtiplots/Diagramm_tex/Efenster_DetB_B}} \\
-            \scalebox{0.2}[0.2]{\input{../2015_10_29/qtiplots/Diagramm_tex/Efenster_DetA_A}} & \scalebox{0.2}[0.2]{\input{../2015_10_29/qtiplots/Diagramm_tex/Efenster_DetA_B}} \\
-            \scalebox{0.2}[0.2]{\input{../2015_10_29/qtiplots/Diagramm_tex/T_A_dia}} & \scalebox{0.2}[0.2]{\input{../2015_10_29/qtiplots/Diagramm_tex/T_B_dia}} \\
-        \end{tabular}
+
         
