--- a/PET/Protokoll/PET_Protokoll_df.tex
+++ b/PET/Protokoll/PET_Protokoll_df.tex
@@ -25,7 +25,6 @@
 
 
     \subsubsection{Messung bei Positionen direkt an den Detektoren}
-
         \begin{tabular}{p{6cm}p{6cm}l}
             \minipanf 
                 \includegraphics[width=1.2\textwidth, height=0.225\textheight]{pic/T_A_dia.png}
@@ -47,7 +46,7 @@
                 \includegraphics[width=1.2\textwidth, height=0.225\textheight]{pic/Efenster_DetA_B.png}
                 \label{dfd:EdetBA}
             \minipend \\
-                \minipanf 
+            \minipanf 
                 \includegraphics[width=1.2\textwidth, height=0.225\textheight]{pic/Efenster_DetB_A.png}
                 \label{dfd:EdetAB}
             \minipend
@@ -58,22 +57,33 @@
                 \label{dfd:EdetBB}
             \minipend \\            
         \end{tabular}
-        \captionof{table}{Gegenüberstellung der Messungen mit der Quelle an Det. A (links) und Det. B (rechts)} 
+        \captionof{figure}{Gegenüberstellung der Messungen mit der Quelle an Det. A (links) und Det. B (rechts)} 
         
     \subsection{Tomografische Messungen}
         \subsubsection{Messung einer Quellkonfiguration, Phantom isotroper Dichteverteilung}
-            \textbf{Hauptversuch}\\
-            \begin{tabular}{p{6cm}p{6cm}l}
-                \minipanf 
-                    \includegraphics[width=1.2\textwidth, height=0.225\textheight]{pic/T_A_dia.png}
-                    %\label{dfd:T_A}
-                \minipend
-                &
-                \hspace{9mm} 
-                \minipanf
-                    \includegraphics[width=1.2\textwidth, height=0.225\textheight]{pic/T_B_dia.png}
-                    %\label{dfd:T_B}
-                \minipend \\               
+          \textbf{Hauptversuch}\\
+             \ \\
+          Als nächsten wurde eine Messung mit unbekannter Quellverteilung gestartet. Die Energie- und das Zeitfenster entsprechen den oben bestimmten Intervallen.
+          \minipanf  
+            \begin{center}
+            \begin{tabular}{p{7cm}p{7cm}c}
+                ungefilterter Projektion & gefilterte Rückprpjektion\\
+                \includegraphics[width=0.3\textwidth, height=0.2\textheight]{pic/Einzelfenster_Bilder/unbekannte_Quelle/unbek1_einf_prj.png}
+                & 
+                \includegraphics[width=.3\textwidth, height=0.2\textheight]{pic/Einzelfenster_Bilder/unbekannte_Quelle/unbek1gef_prj.png}\\
+                \includegraphics[width=0.3\textwidth, height=0.2\textheight]{pic/Einzelfenster_Bilder/unbekannte_Quelle/unbek2einf_prj.png}
+                & 
+                \includegraphics[width=.3\textwidth, height=0.2\textheight]{pic/Einzelfenster_Bilder/unbekannte_Quelle/unbek2gef_prj.png}\\ 
+                \includegraphics[width=0.3\textwidth, height=0.2\textheight]{pic/Einzelfenster_Bilder/unbekannte_Quelle/unbek3einf_prj.png}
+                & 
+                \includegraphics[width=.3\textwidth, height=0.2\textheight]{pic/Einzelfenster_Bilder/unbekannte_Quelle/unbek3gef_prj.png}\\               
+                \includegraphics[width=0.3\textwidth, height=0.2\textheight]{pic/Einzelfenster_Bilder/unbekannte_Quelle/unbek4einf_prj.png}
+                & 
+                \includegraphics[width=.3\textwidth, height=0.2\textheight]{pic/Einzelfenster_Bilder/unbekannte_Quelle/unbek4gef_prj.png} \pagebreak
             \end{tabular}
+            \end{center}
+            \captionof{figure}{Screenshots der Bildenstehung der gefilterten (rechts) und ungefilterten (links) Rückprojektion}
+          \minipend\\ \ \\
             \textbf{Untersuchung des Einflusses verschiedener Filter}\\
+            
         \subsubsection{Messung mit einer Punktquelle, Phantom an-/insotroper Dichteverteilung}
