Just commit for pulling

--- a/PET/Protokoll/PET_Protokoll_df.tex
+++ b/PET/Protokoll/PET_Protokoll_df.tex
@@ -61,7 +61,7 @@
         \captionof{table}{Gegenüberstellung der Messungen mit der Quelle an Det. A (links) und Det. B (rechts)} 
         
     \subsection{Tomografische Messungen}
-        \subsubsection{Messung einer Quellkonfiguration, Phantom isotroper Dichteverteilung}
+    	\subsubsection{Messung einer Quellkonfiguration, Phantom isotroper Dichteverteilung}
             \textbf{Hauptversuch}\\
             \begin{tabular}{p{6cm}p{6cm}l}
                 \minipanf 
@@ -75,5 +75,21 @@
                     %\label{dfd:T_B}
                 \minipend \\               
             \end{tabular}
+            
             \textbf{Untersuchung des Einflusses verschiedener Filter}\\
+            
+            \begin{tabular}{p{6cm}p{6cm}c}
+                            \minipanf 
+                                \makebox[\linewidth]{\includegraphics[width=2\textwidth, height=0.225\textheight]{pic/3dPlotTomographRamp.png}}
+                                %\label{dfd:Ramp}
+                            \minipend
+                            &
+                            \hspace{3mm} 
+                            \minipanf
+                                \includegraphics[width=2.2\textwidth, height=0.25\textheight]{pic/3dPlotTomographUngef.png}
+                                %\label{dfd:Ungefil}
+                            \minipend \\               
+             \end{tabular}
+             \captionof{figure}{Gefilterte und Ungefilterte Rückprojektion der Aktivitätsverteilung}
+            
         \subsubsection{Messung mit einer Punktquelle, Phantom an-/insotroper Dichteverteilung}
